--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,8 +1,4 @@
-<div fxLayout="row wrap" fxLayoutAlign="center start">
-    <div fxFlex>
-        <app-user></app-user>
-    </div>
-    <div fxFlex>
-        <app-user-list></app-user-list>
-    </div>
+<div fxLayout="column" fxLayoutAlign="space-around stretch" fxLayoutGap="30px" fxLayout.xs="row">
+  <app-user></app-user>
+  <app-user-list></app-user-list>
 </div>
