--- a/src/app/components/users/user-list/user-list.component.html
+++ b/src/app/components/users/user-list/user-list.component.html
@@ -26,11 +26,11 @@
     </ng-container>
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Actions </th>
-      <td mat-cell *matCellDef="let row">
-        <button mat-mini-fab color="primary">
+      <td mat-cell *matCellDef="let element">
+        <button mat-mini-fab color="primary" (click)="onEdit(element)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-mini-fab color="warn">
+        <button mat-mini-fab color="warn" (click)="onDelete(element.$key)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
