Generate mat select on the location field

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <title>TELENAR</title>
 </head>
 <body>
-    <mat-toolbar>TELENAR - Administrador de usuarios</mat-toolbar>
+    <mat-toolbar color="primary">TELENAR - Administrador de usuarios</mat-toolbar>
     <app-users></app-users>
 </body>
 </html>
