--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="space-around stretch" fxLayoutGap="30px" fxLayout.xs="row">
+<div fxLayout="column" fxLayoutAlign="space-around stretch" fxLayoutGap="30px" fxLayout.xs="column">
   <app-user></app-user>
   <app-user-list></app-user-list>
 </div>
