--- a/src/app/components/users/user-list/user-list.component.html
+++ b/src/app/components/users/user-list/user-list.component.html
@@ -1,36 +1,36 @@
 <div class="container">
-  <table mat-table [dataSource]="userList" class="mat-elevation-z8">
+  <table mat-table [dataSource]="userList" class="mat-elevation-z10">
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Nombre </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
     </ng-container>
     <ng-container matColumnDef="lastName">
-      <th mat-header-cell *matHeaderCellDef> Nombre </th>
-      <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+      <th mat-header-cell *matHeaderCellDef> Apellidos </th>
+      <td mat-cell *matCellDef="let row"> {{row.lastName}} </td>
     </ng-container>
     <ng-container matColumnDef="location">
       <th mat-header-cell *matHeaderCellDef> Ubicación </th>
-      <td mat-cell *matCellDef="let element"> {{element.location}} </td>
+      <td mat-cell *matCellDef="let row"> {{row.location}} </td>
     </ng-container>
     <ng-container matColumnDef="contact">
       <th mat-header-cell *matHeaderCellDef> Contacto </th>
-      <td mat-cell *matCellDef="let element"> {{element.contact}} </td>
+      <td mat-cell *matCellDef="let row"> {{row.contact}} </td>
     </ng-container>
     <ng-container matColumnDef="capacity">
       <th mat-header-cell *matHeaderCellDef> Capacidad (Mb) </th>
-      <td mat-cell *matCellDef="let element"> {{element.capacity}} </td>
+      <td mat-cell *matCellDef="let row"> {{row.capacity}} </td>
     </ng-container>
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef> Precio </th>
-      <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+      <td mat-cell *matCellDef="let row"> {{row.price}} </td>
     </ng-container>
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Actions </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-mini-fab color="primary" (click)="onEdit(element)">
+      <td mat-cell *matCellDef="let row">
+        <button mat-mini-fab color="primary" (click)="onEdit(row)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-mini-fab color="warn" (click)="onDelete(element.$key)">
+        <button mat-mini-fab color="warn" (click)="onDelete(row.$key)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
